--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -21,12 +21,13 @@
     margin-bottom: 30px;
   }
 	h2 {
-    font-size: 3.3rem;
     margin: 50px 0 20px;
+    padding: 8px 0 8px 2rem;
     border-left: 10px solid;
     border-image: linear-gradient(to bottom, $main-color2 0%, rgba($main-color2, 0.4) 100%);
     border-image-slice: 1;
-    padding: 8px 0 8px 2rem;
+    // font-size: 3.3rem;
+    font-size: clamp(2.1rem, 5.1vw, 3.5rem);
   }
   h3 {
     font-size: 2.8rem;
@@ -164,7 +165,7 @@
       margin: 45px 0 20px;
       padding: 4px 0 4px 1.2rem;
       border-left: 7px solid $main-color2;
-      font-size: 2.1rem;
+      //font-size: 2.1rem;
     }
     h3 {
       margin-bottom: 10px;
