--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -40,6 +40,7 @@ html {
 }
 
 .gatsby-resp-image-wrapper {
+  margin-top: 40px;
   margin-left: 1rem !important;
   margin-bottom: 50px;
   max-width: 90%;
