--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -12,13 +12,13 @@
   }
 	h1 {
     width: 95%;
+    margin-top: 50px;
+    margin-bottom: 30px;
     padding-bottom: 8px;
-    font-size: 4rem;
     border-bottom: 7px solid;
     border-image: linear-gradient(to right, $main-color2 0%, rgba($main-color2, 0.6) 100%);
     border-image-slice: 1;
-    margin-top: 50px;
-    margin-bottom: 30px;
+    font-size: clamp(26px, 5vw, 40px);
   }
 	h2 {
     margin: 50px 0 20px;
@@ -26,17 +26,18 @@
     border-left: 10px solid;
     border-image: linear-gradient(to bottom, $main-color2 0%, rgba($main-color2, 0.4) 100%);
     border-image-slice: 1;
-    font-size: clamp(2.1rem, 5.1vw, 3.5rem);
+    font-size: clamp(2.1rem, 4.1vw, 3.5rem);
   }
   h3 {
     font-size: 2.8rem;
+    font-size: clamp(18px, 4vw, 28px);
     margin: 30px 0 20px;
   }
   p {
     margin-bottom: 15px;
-    font-size: 1.68rem;
+    font-size: clamp(15px, 3vw, 17.5px);
     letter-spacing: 0.5px;
-    line-height: 1.7;
+    line-height: 1.75;
     text-indent: 0.8rem;
   }
   ol {
@@ -58,7 +59,7 @@
   }
   blockquote {
     position: relative;
-    width: 80%;
+    width: 85%;
     padding: 18px 30px 18px 60px;
     margin-top: 12px;
     margin-left: 1rem;
@@ -69,7 +70,7 @@
     color: #666;
     p {
       margin: 0;
-      font-size: 1.6rem;
+      font-size: clamp(14px, 2vw, 16.5px);
       line-height: 1.6;
     }
     &::before {
@@ -105,15 +106,15 @@
   }
   aside {
     position: relative;
-    padding: 18px 30px 18px 60px;
+    padding: 18px 20px 18px 60px;
     margin-bottom: 20px;
-    width: 80%;
+    width: 85%;
     border-radius: 3px;
     background-color: rgba(#396afc, 0.15);
     box-shadow: 0 0 1.5px 1.5px rgba(#396afc, 0.25);
     p {
       margin: 0;
-      font-size: 1.6rem;
+      font-size: clamp(15.5px, 2.5vw, 17px);
       line-height: 1.6;
     }
     &::before {
@@ -158,7 +159,6 @@
 		h1 {
       width: 100%;
       margin: 30px 0 20px;
-      font-size: 2.6rem;
     }
     h2 {
       margin: 45px 0 20px;
@@ -168,12 +168,9 @@
     h3 {
       margin-bottom: 10px;
       padding: 3px 0;
-      font-size: 1.8rem;
     }
     p {
       margin-bottom: 10px;
-      font-size: 1.5rem;
-      line-height: 1.7;
     }
     ul {
       padding: 5px 15px;
@@ -186,10 +183,6 @@
       padding: 10px 12px;
       border-left: 6px solid #bbb;
       border-radius: 0;
-      p {
-        font-size: 1.3rem;
-        line-height: 1.5;
-      }
       &::before {
         display: none;
       }
@@ -215,7 +208,6 @@
       padding: 10px 15px 10px 50px;
       width: 80%;
       p {
-        font-size: 1.3rem;
         line-height: 1.5;
       }
       &::before {
