--- a/src/styles/mobilePagination.module.scss
+++ b/src/styles/mobilePagination.module.scss
@@ -1,22 +1,23 @@
 .mobilePagination {
-  display: flex;
   position: relative;
-  width: 100%;
+  display: flex;
   justify-content: space-around;
+  width: 98%;
+  height: 43px;
+  margin: 20px 0 50px;
   font-size: 2.5rem;
   font-weight: 100;
-  margin: 50px 0 80px;
   .topButton,
   .lastButton,
   .prevButton,
   .nextButton {
-    width: 20%;
     position: absolute;
-    border: 1px solid #bbb;
+    width: 20%;
+    padding: 8px 0;
+    background-image: linear-gradient(to bottom, #eee, #ddd);
+    border: 1px solid #ccc;
     border-radius: 2px;
     text-align: center;
-    background-image: linear-gradient(to bottom, #eee, #ddd);
-    padding: 8px 0;
     svg {
       color: #888;
     }
