--- a/src/styles/404.module.scss
+++ b/src/styles/404.module.scss
@@ -1,9 +1,9 @@
 @import "../scss/variables";
 
 .dateInfo {
-	text-align: center;
-	font-size: 1.8rem;
+	font-size: clamp(13px, 1.8vw, 18px);
 	font-weight: 900;
+	text-align: center;
 	svg {
 		margin-right: 8px;
 	}
@@ -16,7 +16,6 @@
 @media screen and (max-width: 768px) {
 	.dateInfo {
     margin-top: 20px;
-    font-size: 1.3rem;
     time {
       margin-left: 15px;
     }
@@ -24,21 +23,21 @@
 }
 
 .main {
-	width: 50%;
-	margin: 50px auto 100px;
+	width: unquote("max(300px, 50%)");
+  margin: clamp(30px, 4vw, 50px) auto clamp(50px, 5vw, 100px);
 	h2 {
-		margin: 80px 0 40px;
-		font-size: 3.2rem;
+		margin: 60px 0 40px;
+		font-size: clamp(25px, 2vw, 32px);
 		text-align: center;
 	}
 	h3 {
 		margin: 40px 0 20px;
-		font-size: 2.5rem;
+		font-size: clamp(20px, 2vw, 25px);
 		line-height: 1.5;
 	}
 	p {
 		margin-bottom: 10px;
-		font-size: 1.8rem;
+		font-size: clamp(16px, 1.8vw, 1.8rem);
 		letter-spacing: 0.5px;
 		text-indent: .8rem;
 		line-height: 1.65;
@@ -50,7 +49,7 @@
 		}
 	}
 	ul {
-		width: 80%;
+		width: unquote("max(270px, 88%)");
 		margin: 20px 10px;
 		padding: 20px 25px;
 		border: 1px dotted #aaa;
@@ -58,7 +57,7 @@
 		list-style: none;
 		li {
 			margin-bottom: 15px;
-			font-size: 1.7rem;
+			font-size: clamp(15px, 1.3vw, 17px);
 			line-height: 1.5;
 		}
 	}
@@ -66,25 +65,12 @@
 
 @media screen and (max-width: 768px) {
 	.main {
-		width: 90%;
-		margin: 30px auto 50px;
 		h2 {
 			margin-bottom: 30px;
-			font-size: 2.5rem;
-		}
-		h3 {
-			font-size: 2rem;
-		}
-		p {
-			font-size: 1.65rem;
 		}
 		ul {
 			margin: 20px auto;
-			width: 88%;
 			padding: 15px 20px;
-			li {
-				font-size: 1.5rem;
-			}
 		}
 	}
 }
