--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -7,25 +7,25 @@
   justify-content: center;
   gap: 30px;
   .box {
-    border: 2px solid #ddd;
-    width: 17vw;
-    height: 17vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 2px solid #ddd;
+    width: 17vw;
+    height: 17vw;
     gap: 30px;
     text-align: center;
     text-decoration: none;
     svg {
       display: block;
-      font-size: 5rem;
+      font-size: clamp(40px, 3vw, 50px);
       color: #444;
       transition-duration: 0.3s;
     }
     span {
       color: #444;
-      font-size: 2.5rem;
+      font-size: clamp(20px, 1.6vw, 25px);
     }
     &:hover {
       svg {
@@ -43,21 +43,15 @@
 
 @media screen and (max-width: 768px) {
   .main {
-    width: 80%;
-    margin: 50px auto;
     flex-direction: column;
     align-items: center;
+    width: 80%;
+    margin: 50px auto;
     .box {
       width: 60%;
       height: auto;
       padding: 30px 10px;
       gap: 20px;
-      svg {
-        font-size: 4rem;
-      }
-      span {
-        font-size: 2rem;
-      }
     }
   }
 }
