--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,12 +1,14 @@
 @import "../scss/variables";
 
 .header {
-	margin-top: 6vh;
+	margin-top: unquote("max(100px, 8vh)");
 	text-align: center;
 	.headerTitle {
 		margin-bottom: 5vh;
-		font-size: 2.5rem;
+    margin-bottom: unquote("max(5vh, 30px)");
+    font-size: clamp(17px, 1.8vw, 30px);
 		font-weight: 100;
+    line-height: 1.5;
 		letter-spacing: 2px;
 		a {
 			color: #444;
@@ -23,7 +25,7 @@
     background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: rgba(255,255,255,0.0);
-    font-size: 3.8rem;
+    font-size: clamp(30px, 3vw, 38px);
     font-weight: 500;
     letter-spacing: 7px;
     line-height: 1.4;
@@ -32,18 +34,9 @@
 
 @media screen and (max-width: 768px) {
   .header {
-    margin-top: 8vh;
-    .headerTitle {
-      font-size: 1.8rem;
-      line-height: 1.5;
-      letter-spacing: 1px;
-      margin-bottom: 3vh;
-    }
     .pageTitle {
       width: 80%;
       margin: 0 auto;
-      font-size: 3rem;
-      line-height: 1.3;
       letter-spacing: 2px;
     }
   }
