--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -1,11 +1,11 @@
 @import "../scss/variables";
 
 .postInfo {
-	margin-top: 70px;
+	margin-top: 50px;
   margin-left: 15vw;
-  width: 50%;
+  width: unquote("max(50%, 324px)");
 	.series {
-    font-size: 1.8rem;
+    font-size: clamp(15px, 2vw, 18px);
     svg {
       margin-right: 10px;
     }
@@ -13,7 +13,7 @@
       color: #444;
       &:hover {
         background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
-        -webkit-background-clip: text;
+        background-clip: text;
         -webkit-text-fill-color: rgba(255,255,255,0.0);
       }
     }
@@ -21,19 +21,19 @@
 	.postTitle {
 		display: inline-block;
     background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: rgba(255,255,255,0.0);
     margin: 15px 0;
-    font-size: 3.3rem;
-    font-weight: 100;
+    font-size: clamp(24px, 2.5vw, 33px);
+    font-weight: 400;
     letter-spacing: 1px;
     line-height: 1.5;
 	}
 	.dateInfo {
     display: flex;
     flex-wrap: wrap;
-		margin-bottom: 15px;
-    font-size: 1.7rem;
+    margin-bottom: 12px;
+    font-size: clamp(15px, 1.3vw, 17px);
     p {
       margin-right: 30px;
       letter-spacing: 0.5px;
@@ -48,7 +48,8 @@
 		align-items: center;
     flex-wrap: wrap;
     margin: 0 0 12px;
-    font-size: 1.8rem;
+    font-size: clamp(15px, 1.8vw, 18px);
+    line-height: 1.5;
     svg {
 			margin-right: 10px;
     }
@@ -58,15 +59,15 @@
         color: #444;
         &:hover {
           background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
-          -webkit-background-clip: text;
+          background-clip: text;
           -webkit-text-fill-color: rgba(255,255,255,0.0);
         }
       }
     }
   }
   .description {
-    width: 90%;
-    font-size: 1.7rem;
+    width: unquote("max(300px, 90%)");
+    font-size: clamp(13.5px, 1.4vw, 17px);
     line-height: 1.5;
     svg {
       margin-right: 10px;
@@ -74,34 +75,13 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .postInfo {
-    width: 87%;
-    margin: 50px auto 0;
-    .series {
-      font-size: 1.5rem;
-    }
-    .postTitle {
-      font-size: 2.4rem;
-      font-weight: 400;
-    }
+    margin: 30px auto 0;
     .dateInfo {
-      font-size: 1.5rem;
-      margin-bottom: 10px;
       p:not(:last-child) {
-        margin-bottom: 8px;
+        margin-bottom: 10px;
       }
-    }
-    .tags {
-      margin-bottom: 10px;
-      font-size: 1.5rem;
-      p {
-        line-height: 1.5;
-      }
-    }
-    .description {
-      width: 98%;
-      font-size: 1.35rem;
     }
   }
 }
