--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -1,74 +1,89 @@
 @import "../scss/variables";
 
-.postInfo {
-	margin-top: 50px;
+.post-info {
+  margin-top: 50px;
   margin-left: 15vw;
   width: unquote("max(50%, 324px)");
-	.series {
+
+  .series {
     font-size: clamp(15px, 2vw, 18px);
+
     svg {
       margin-right: 10px;
     }
+
     a {
       color: #444;
+
       &:hover {
         background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
         background-clip: text;
-        -webkit-text-fill-color: rgba(255,255,255,0.0);
+        -webkit-text-fill-color: rgba(255, 255, 255, 0%);
       }
     }
   }
-	.postTitle {
-		display: inline-block;
+
+  .post-title {
+    display: inline-block;
     background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
     background-clip: text;
-    -webkit-text-fill-color: rgba(255,255,255,0.0);
+    -webkit-text-fill-color: rgba(255, 255, 255, 0%);
     margin: 15px 0;
     font-size: clamp(24px, 2.5vw, 33px);
     font-weight: 400;
     letter-spacing: 1px;
     line-height: 1.5;
-	}
-	.dateInfo {
+  }
+
+  .date-info {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 12px;
     font-size: clamp(15px, 1.3vw, 17px);
+
     p {
       margin-right: 30px;
       letter-spacing: 0.5px;
+
       svg {
         margin-right: 10px;
       }
     }
   }
-	.tags {
+
+  .tags {
     display: flex;
     flex-direction: row;
-		align-items: center;
+    align-items: center;
     flex-wrap: wrap;
     margin: 0 0 12px;
     font-size: clamp(15px, 1.8vw, 18px);
     line-height: 1.5;
+
     svg {
-			margin-right: 10px;
+      margin-right: 10px;
     }
+
     p {
       margin-right: 20px;
+
       a {
         color: #444;
+
         &:hover {
           background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
           background-clip: text;
-          -webkit-text-fill-color: rgba(255,255,255,0.0);
+          -webkit-text-fill-color: rgba(255, 255, 255, 0%);
         }
       }
     }
   }
+
   .description {
     width: unquote("max(300px, 90%)");
     font-size: clamp(13.5px, 1.4vw, 17px);
     line-height: 1.5;
+
     svg {
       margin-right: 10px;
     }
@@ -76,9 +91,10 @@
 }
 
 @media (max-width: 768px) {
-  .postInfo {
+  .post-info {
     margin: 30px auto 0;
-    .dateInfo {
+
+    .date-info {
       p:not(:last-child) {
         margin-bottom: 10px;
       }
