--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -6,10 +6,12 @@
   right: 40px;
   transition: 0.3s;
   z-index: 2;
+
   .check {
     display: none;
   }
-  .menuBtn {
+
+  .menu-btn {
     display: block;
     position: relative;
     height: 50px;
@@ -18,12 +20,14 @@
     border-radius: 100vh;
     transition: 0.2s;
     background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
-    box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 2px 0 rgba(255, 255, 255, 20%), 0 2px 2px rgba(0, 0, 0, 10%);
     border-bottom: solid 2px #b5b5b5;
     cursor: pointer;
+
     &:hover {
       background-color: #ededed;
     }
+
     span {
       position: absolute;
       top: 50%;
@@ -32,32 +36,38 @@
       z-index: 2;
     }
   }
+
   .list {
     position: absolute;
     top: 10px;
     left: -200px;
     display: none;
+
     input {
       border: 1px solid #aaa;
       padding: 0.5rem;
       border-radius: 10px;
       appearance: none;
+
       &:focus {
         box-shadow: 0 0 7px $main-color2;
         border: 1px solid #1675cc;
       }
     }
-    .resultArea {
+
+    .result-area {
       position: absolute;
       top: 50px;
       right: 0;
       width: 250%;
       max-height: 80vh;
       overflow-y: auto;
-      .inner{
+
+      .inner {
         background-color: #444;
         padding: 18px 30px;
         list-style: none;
+
         p {
           margin-bottom: 20px;
           color: #fff;
@@ -65,20 +75,24 @@
           font-weight: 900;
           letter-spacing: 1px;
           line-height: 1.4;
+
           span {
             color: red;
             font-size: 2rem;
             font-weight: 500;
           }
         }
+
         ul {
           li {
             margin-bottom: 10px;
+
             a {
               color: #fff;
               font-size: 1.65rem;
               line-height: 1.65;
               transition: 0.1s;
+
               &:hover {
                 color: $main-color2;
               }
@@ -88,6 +102,7 @@
       }
     }
   }
+
   .check:checked ~ .list {
     display: block;
   }
@@ -97,24 +112,29 @@
   .wrapper {
     top: 15px;
     right: 15px;
-    .menuBtn {
+
+    .menu-btn {
       height: 40px;
       width: 40px;
+
       svg {
         height: 23px;
         width: 23px;
       }
     }
+
     .list {
-      .resultArea {
+      .result-area {
         left: 50%;
         transform: translateX(-50%);
         width: 160%;
         max-height: 60vh;
+
         .inner {
           ul {
             li {
               margin-bottom: 8px;
+
               a {
                 font-size: 1.5rem;
               }
