--- a/src/styles/tableOfContent.module.scss
+++ b/src/styles/tableOfContent.module.scss
@@ -1,30 +1,36 @@
 @import "../scss/variables";
 
-.tableOfContent {
-	width: 30%;
-	margin-top: 80px;
-	margin-right: 50px;
-	ul {
-		position: -webkit-sticky;
+.table-of-content {
+  width: 30%;
+  margin-top: 80px;
+  margin-right: 50px;
+
+  ul {
     position: sticky;
     top: 9vh;
-		padding-left: 10px;
-		list-style: none;
-		li {
+    padding-left: 10px;
+    list-style: none;
+
+    li {
       margin-bottom: 8px;
       font-size: 1.7rem;
-			line-height: 1.6;
+      line-height: 1.6;
+
       p {
         margin-bottom: 8px;
       }
-			a {
+
+      a {
         position: relative;
-				color: #444;
-				&:hover {
-					color: $main-color2;
-				}
+        color: #444;
+
+        &:hover {
+          color: $main-color2;
+        }
+
         &.active {
           color: $main-color2;
+
           &::before {
             position: absolute;
             content: "▶️";
@@ -34,14 +40,13 @@
             transform: translateY(-50%);
           }
         }
-			}
-		}
-	}
+      }
+    }
+  }
 }
 
-@media screen and (max-width: 768px) {
-	.tableOfContent {
-		display: none;
-	}	
+@media (max-width: 768px) {
+  .table-of-content {
+    display: none;
+  }
 }
-
