--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -21,22 +21,14 @@ html {
 }
 
 .load-animation {
+  display: flex;
+  justify-content: center;
   animation: fade-in 1s ease 0s 1 normal;
 
   @keyframes fade-in {
     0% { opacity: 0; }
     100% { opacity: 1; }
   }
-
-  @-webkit-keyframes fade-in {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-  }
-}
-
-.load-animation {
-  display: flex;
-  justify-content: center;
 }
 
 .gatsby-resp-image-wrapper {
@@ -44,6 +36,7 @@ html {
   margin-left: 1rem !important;
   margin-bottom: 50px;
   max-width: 90%;
+
   img {
     height: auto;
     box-shadow: 0 0 5px 5px #eee !important;
@@ -58,14 +51,13 @@ html {
 .gatsby-highlight {
   width: 93%;
   background-color: #444;
-  border-radius: 0 .3rem .3rem .3rem;
+  border-radius: 0 0.3rem 0.3rem;
   margin: 0 0 50px;
-  padding: .6em;
+  padding: 0.6em;
   overflow: auto;
   font-size: 1.6rem;
 }
 
-// 協調行
 .gatsby-highlight-code-line {
   background-color: #066;
   display: block;
@@ -85,7 +77,7 @@ html {
 }
 
 .gatsby-highlight pre[class*="language-"].line-numbers {
-  padding-left: 2.5em; 
+  padding-left: 2.5em;
 }
 
 @media screen and (max-width: 768px) {
@@ -103,7 +95,7 @@ html {
   padding: 1.5rem 1.8rem 2.5rem;
   font-size: 1.6rem;
   line-height: 0.2;
-  font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-weight: 400;
   border-radius: 2px 2px 0 0;
   display: table;
@@ -120,17 +112,19 @@ html {
 
 .warn {
   position: relative;
-  padding: 18px 30px 18px 60px ;
+  padding: 18px 30px 18px 60px;
   margin-bottom: 20px;
   width: 80%;
   border-radius: 3px;
   background-color: rgba(red, 0.15);
   box-shadow: 0 0 1.5px 1.5px rgba(red, 0.2);
+
   p {
     margin: 0;
     font-size: 1.6rem;
     line-height: 1.6;
   }
+
   &::before {
     content: "❕";
     top: 50%;
@@ -140,7 +134,7 @@ html {
     position: absolute;
     z-index: 1;
     margin-left: -50px;
-    background-color: rgba(red, .4);
+    background-color: rgba(red, 0.4);
     border-radius: 100%;
     height: 3.5rem;
     width: 3.5rem;
@@ -148,14 +142,16 @@ html {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .warn {
     padding: 10px 15px 10px 50px;
     width: 80%;
+
     p {
       font-size: 1.3rem;
       line-height: 1.5;
     }
+
     &::before {
       font-size: 1.5rem;
       height: 2.5rem;
