--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   gap: 30px;
+
   .box {
     display: flex;
     flex-direction: column;
@@ -17,36 +18,41 @@
     gap: 30px;
     text-align: center;
     text-decoration: none;
+
     svg {
       display: block;
       font-size: clamp(40px, 3vw, 50px);
       color: #444;
       transition-duration: 0.3s;
     }
+
     span {
       color: #444;
       font-size: clamp(20px, 1.6vw, 25px);
     }
+
     &:hover {
       svg {
         color: $main-color2;
       }
+
       span {
-        color: #ACB6E5;
-        background: -webkit-linear-gradient(0deg, $main-color2, $sub-color);
-        -webkit-background-clip: text;
+        color: #acb6e5;
+        background: linear-gradient(0deg, $main-color2, $sub-color);
+        background-clip: text;
         -webkit-text-fill-color: transparent;
       }
     }
   }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .main {
     flex-direction: column;
     align-items: center;
     width: 80%;
     margin: 50px auto;
+
     .box {
       width: 60%;
       height: auto;
