--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -19,7 +19,7 @@
     &:hover {
       background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
       background-clip: text;
-      -webkit-text-fill-color: rgba(255, 255, 255, 0%);
+      -webkit-text-fill-color: rgba(255, 255, 255, 0);
     }
   }
 }
@@ -29,7 +29,7 @@
   margin-bottom: 30px;
   background: linear-gradient(135deg, $main-color 10%, $sub-color 90%);
   background-clip: text;
-  -webkit-text-fill-color: rgba(255, 255, 255, 0%);
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
   font-size: clamp(30px, 3vw, 38px);
   font-weight: 500;
   letter-spacing: 7px;
