--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -6,142 +6,130 @@
   right: 40px;
   transition: 0.3s;
   z-index: 2;
+}
 
-  .check {
-    display: none;
+.check {
+  display: none;
+}
+
+.menu-btn {
+  display: block;
+  position: relative;
+  height: 50px;
+  width: 50px;
+  background-color: #ddd;
+  border-radius: 100vh;
+  transition: 0.2s;
+  background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+  box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.2), 0 2px 2px rgba(0, 0, 0, 0.1);
+  border-bottom: solid 2px #b5b5b5;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #ededed;
   }
 
-  .menu-btn {
-    display: block;
-    position: relative;
-    height: 50px;
-    width: 50px;
-    background-color: #ddd;
-    border-radius: 100vh;
-    transition: 0.2s;
-    background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
-    box-shadow: inset 0 2px 0 rgba(255, 255, 255, 20%), 0 2px 2px rgba(0, 0, 0, 10%);
-    border-bottom: solid 2px #b5b5b5;
-    cursor: pointer;
+  span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+  }
+}
 
-    &:hover {
-      background-color: #ededed;
-    }
+.list {
+  position: absolute;
+  top: 10px;
+  left: -200px;
+  display: none;
+}
+
+.input {
+  border: 1px solid #aaa;
+  padding: 0.5rem;
+  border-radius: 10px;
+  appearance: none;
+
+  &:focus {
+    box-shadow: 0 0 7px $main-color2;
+    border: 1px solid #1675cc;
+  }
+}
+
+.result-area {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  width: 250%;
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
+.inner {
+  background-color: #444;
+  padding: 18px 30px;
+  list-style: none;
+
+  p {
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 1.55rem;
+    font-weight: 900;
+    letter-spacing: 1px;
+    line-height: 1.4;
 
     span {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 2;
+      color: red;
+      font-size: 2rem;
+      font-weight: 500;
     }
   }
+}
 
-  .list {
-    position: absolute;
-    top: 10px;
-    left: -200px;
-    display: none;
+.list-item {
+  margin-bottom: 10px;
 
-    input {
-      border: 1px solid #aaa;
-      padding: 0.5rem;
-      border-radius: 10px;
-      appearance: none;
+  a {
+    color: #fff;
+    font-size: clamp(15px, 1.5vw, 16.5px);
+    line-height: 1.65;
+    transition: 0.1s;
 
-      &:focus {
-        box-shadow: 0 0 7px $main-color2;
-        border: 1px solid #1675cc;
-      }
-    }
-
-    .result-area {
-      position: absolute;
-      top: 50px;
-      right: 0;
-      width: 250%;
-      max-height: 80vh;
-      overflow-y: auto;
-
-      .inner {
-        background-color: #444;
-        padding: 18px 30px;
-        list-style: none;
-
-        p {
-          margin-bottom: 20px;
-          color: #fff;
-          font-size: 1.55rem;
-          font-weight: 900;
-          letter-spacing: 1px;
-          line-height: 1.4;
-
-          span {
-            color: red;
-            font-size: 2rem;
-            font-weight: 500;
-          }
-        }
-
-        ul {
-          li {
-            margin-bottom: 10px;
-
-            a {
-              color: #fff;
-              font-size: 1.65rem;
-              line-height: 1.65;
-              transition: 0.1s;
-
-              &:hover {
-                color: $main-color2;
-              }
-            }
-          }
-        }
-      }
+    &:hover {
+      color: $main-color2;
     }
   }
+}
 
-  .check:checked ~ .list {
-    display: block;
-  }
+.check:checked ~ .list {
+  display: block;
 }
 
 @media screen and (max-width: 768px) {
   .wrapper {
     top: 15px;
     right: 15px;
+  }
 
-    .menu-btn {
-      height: 40px;
-      width: 40px;
+  .menu-btn {
+    height: 40px;
+    width: 40px;
 
-      svg {
-        height: 23px;
-        width: 23px;
-      }
+    svg {
+      height: 23px;
+      width: 23px;
     }
+  }
 
-    .list {
-      .result-area {
-        left: 50%;
-        transform: translateX(-50%);
-        width: 160%;
-        max-height: 60vh;
+  .result-area {
+    left: 50%;
+    transform: translateX(-50%);
+    width: 160%;
+    max-height: 60vh;
+  }
 
-        .inner {
-          ul {
-            li {
-              margin-bottom: 8px;
-
-              a {
-                font-size: 1.5rem;
-              }
-            }
-          }
-        }
-      }
-    }
+  .list-item {
+    margin-bottom: 8px;
   }
 }
