--- a/src/styles/series.module.scss
+++ b/src/styles/series.module.scss
@@ -3,62 +3,62 @@
 .series-main,
 .tags-main {
   width: 55vw;
-  margin: 70px auto 100px;
-  padding: 50px 0;
+  margin: 60px auto 110px;
+  padding: 30px 0;
+}
 
-  .series-list,
-  .tag-list {
-    display: flex;
-    list-style: none;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    gap: 10px;
+.series-list,
+.tag-list {
+  display: flex;
+  list-style: none;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 10px;
+}
 
-    .list-item {
-      a {
-        display: block;
-        padding: 8px 15px;
-        font-size: 1.7rem;
-        text-decoration: none;
-        color: #444;
-        font-weight: 500;
-        transition: 0.3s;
-        border: 2.3px solid #888;
-        border-radius: 3px;
+.list-item {
+  a {
+    display: block;
+    padding: 8px 15px;
+    font-size: 1.7rem;
+    text-decoration: none;
+    color: #444;
+    font-weight: 500;
+    transition: 0.3s;
+    border: 2.3px solid #888;
+    border-radius: 3px;
 
-        &:hover {
-          color: $main-color2;
-          border-color: $main-color2;
-        }
-      }
-    }
-  }
-
-  .tag-list {
-    .list-item {
-      margin-right: 5px;
+    &:hover {
+      color: $main-color2;
+      border-color: $main-color2;
     }
   }
 }
 
-@media screen and (max-width: 768px) {
+.tag-list {
+  .list-item {
+    margin-right: 5px;
+  }
+}
+
+@media (max-width: 768px) {
   .series-main,
   .tags-main {
     width: 90vw;
     margin: 30px auto 50px;
     padding: 20px 0;
+  }
 
-    .series-list,
-    .tag-list {
-      gap: 8px;
+  .series-list,
+  .tag-list {
+    gap: 8px;
+  }
 
-      .list-item {
-        a {
-          padding: 6px 10px;
-          font-size: 1.2rem;
-          border: 1.5px solid #888;
-        }
-      }
+  .list-item {
+    a {
+      padding: 6px 10px;
+      font-size: 1.2rem;
+      border: 1.5px solid #888;
     }
   }
 }
