--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -92,7 +92,7 @@
 
   a {
     color: #fff;
-    font-size: clamp(15px, 1.5vw, 16.5px);
+    font-size: clamp(1.5rem, 1.5vw, 1.65rem);
     line-height: 1.65;
     transition: 0.1s;
 
