--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -21,7 +21,7 @@
 .footer-title {
   width: unquote("max(50%, 324px)");
   margin: 0 auto 20px;
-  font-size: clamp(17px, 2.8vw, 28px);
+  font-size: clamp(1.7rem, 2.8vw, 2.8rem);
   font-weight: 100;
   letter-spacing: 2px;
 }
@@ -45,7 +45,7 @@
   a {
     margin-right: 25px;
     margin-bottom: 5px;
-    font-size: clamp(14px, 2vw, 17px);
+    font-size: clamp(1.4rem, 2vw, 1.7rem);
 
     svg {
       margin-right: 5px;
@@ -55,7 +55,7 @@
 
 .copyright {
   margin-top: 30px;
-  font-size: clamp(15px, 1.4vw, 17px);
+  font-size: clamp(1.5rem, 1.4vw, 1.7rem);
   letter-spacing: 0.5px;
   text-align: center;
 }
