--- a/src/styles/pageinfo.module.scss
+++ b/src/styles/pageinfo.module.scss
@@ -1,6 +1,6 @@
 .count-info {
   margin: 0 auto 50px;
-  font-size: clamp(15px, 1.8vw, 22px);
+  font-size: clamp(1.5rem, 1.8vw, 2.2rem);
   text-align: center;
 }
 
@@ -8,6 +8,6 @@
   margin: 10px 0 20px;
 
   span {
-    font-size: clamp(23px, 2vw, 35px);
+    font-size: clamp(2.3rem, 2vw, 3.5rem);
   }
 }
