--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -20,7 +20,7 @@
     border-bottom: 7px solid;
     border-image: linear-gradient(to right, $main-color2 0%, rgba($main-color2, 0.6) 100%);
     border-image-slice: 1;
-    font-size: clamp(26px, 5vw, 40px);
+    font-size: clamp(2.6rem, 5vw, 4rem);
   }
 
   h2 {
@@ -33,14 +33,14 @@
   }
 
   h3 {
-    font-size: 2.8rem;
-    font-size: clamp(18px, 4vw, 28px);
     margin: 30px 0 20px;
+    font-size: 2.8rem;
+    font-size: clamp(1.8rem, 4vw, 2.8rem);
   }
 
   p {
     margin-bottom: 15px;
-    font-size: clamp(15px, 3vw, 17.5px);
+    font-size: clamp(1.5rem, 3vw, 1.75rem);
     letter-spacing: 0.5px;
     line-height: 1.75;
     text-indent: 0.8rem;
@@ -50,20 +50,20 @@
     padding: 10px 20px;
 
     li {
+      margin-bottom: 10px;
       font-size: 1.8rem;
       line-height: 1.5;
-      margin-bottom: 10px;
     }
   }
 
   ul {
-    list-style: none;
     padding: 10px 20px;
+    list-style: none;
 
     li {
-      font-size: 1.8rem;
-      line-height: 1.5;
       margin-bottom: 10px;
+      font-size: clamp(1.4rem, 1.65vw, 1.8rem);
+      line-height: 1.5;
     }
   }
 
@@ -81,7 +81,7 @@
 
     p {
       margin: 0;
-      font-size: clamp(14px, 2vw, 16.5px);
+      font-size: clamp(1.4rem, 2vw, 1.65rem);
       line-height: 1.6;
     }
 
@@ -104,17 +104,17 @@
         border: 1px solid #bbb;
         padding: 10px 15px;
         background: $main-color2;
-        font-size: 1.7rem;
-        font-weight: 400;
         color: #fff;
+        font-size: clamp(1.5rem, 1.7vw, 1.7rem);
+        font-weight: 400;
         line-height: 1.3;
         vertical-align: middle;
       }
 
       td {
         padding: 10px 20px;
-        font-size: 1.7rem;
         border: 1px solid #bbb;
+        font-size: clamp(1.4rem, 1.6vw, 1.7rem);
         line-height: 1.3;
       }
     }
@@ -122,33 +122,33 @@
 
   aside {
     position: relative;
-    padding: 18px 20px 18px 60px;
-    margin-bottom: 20px;
     width: 85%;
-    border-radius: 3px;
+    margin-bottom: 20px;
+    padding: 18px 20px 18px 60px;
     background-color: rgba(#396afc, 0.15);
+    border-radius: 3px;
     box-shadow: 0 0 1.5px 1.5px rgba(#396afc, 0.25);
 
     p {
       margin: 0;
-      font-size: clamp(15.5px, 2.5vw, 17px);
+      font-size: clamp(1.55rem, 2.5vw, 1.7rem);
       line-height: 1.6;
     }
 
     &::before {
+      position: absolute;
       content: "💡";
       top: 50%;
-      font-size: 2rem;
-      line-height: 1.6;
       transform: translateY(-50%);
-      position: absolute;
-      z-index: 1;
+      height: 3.5rem;
+      width: 3.5rem;
       margin-left: -50px;
       background-color: rgba(#396afc, 0.3);
       border-radius: 100%;
-      height: 3.5rem;
-      width: 3.5rem;
+      font-size: 2rem;
+      line-height: 1.6;
       text-align: center;
+      z-index: 1;
     }
   }
 
@@ -156,9 +156,9 @@
     width: 90%;
     margin: 20px 0;
     padding: 15px 0 15px 25px;
-    font-size: 1.6rem;
     border-radius: 5px;
     box-shadow: 0 0 2px 3px #eee;
+    font-size: 1.6rem;
 
     summary {
       cursor: pointer;
@@ -200,10 +200,6 @@
 
     ul {
       padding: 5px 15px;
-
-      li {
-        font-size: 1.4rem;
-      }
     }
 
     blockquote {
@@ -227,12 +223,10 @@
       tr {
         th {
           padding: 5px 8px;
-          font-size: 1.5rem;
         }
 
         td {
           padding: 5px 8px;
-          font-size: 1.4rem;
         }
       }
     }
@@ -276,7 +270,7 @@
   transition: 0.25s;
 
   &:hover {
-    background: rgba(240, 240, 240, 50%);
+    background: rgba(240, 240, 240, 0.5);
   }
 }
 
