--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -80,7 +80,7 @@ html {
   padding-left: 2.5em;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .gatsby-highlight {
     font-size: 1.3rem;
     margin: 20px 0 25px;
@@ -93,20 +93,19 @@ html {
   margin-bottom: -0.65em;
   padding: 1.5rem 1.8rem 2.5rem;
   background: $main-color2;
-  border-radius: 2px 2px 0 0;
+  border-radius: 1px 1px 0 0;
   color: #ddd;
-  font-size: 1.6rem;
+  font-size: clamp(1.4rem, 1.5vw, 1.6rem);
   font-weight: 400;
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   line-height: 0.2;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .gatsby-code-title {
     margin-top: 20px;
     margin-bottom: -2rem;
     padding: 1.2rem 1.5rem 1rem;
-    font-size: 1.4rem;
   }
 }
 
@@ -121,7 +120,7 @@ html {
 
   p {
     margin: 0;
-    font-size: 1.6rem;
+    font-size: clamp(1.3rem, 1.5vw, 1.6rem);
     line-height: 1.6;
   }
 
@@ -135,7 +134,7 @@ html {
     margin-left: -50px;
     background-color: rgba(red, 0.4);
     border-radius: 100%;
-    font-size: 2rem;
+    font-size: clamp(1.5rem, 1.8vw, 2rem);
     line-height: 1.6;
     text-align: center;
     z-index: 1;
@@ -147,16 +146,10 @@ html {
     width: 80%;
     padding: 10px 15px 10px 50px;
 
-    p {
-      font-size: 1.3rem;
-      line-height: 1.5;
-    }
-
     &::before {
       height: 2.5rem;
       width: 2.5rem;
       margin-left: -40px;
-      font-size: 1.5rem;
     }
   }
 }
