--- a/src/styles/404.module.scss
+++ b/src/styles/404.module.scss
@@ -22,7 +22,7 @@
 }
 
 .main {
-  width: unquote("max(300px, 50%)");
+  width: unquote("max(310px, 50%)");
   margin: clamp(3rem, 4vw, 5rem) auto clamp(5rem, 5vw, 10rem);
 
   p {
@@ -43,7 +43,7 @@
 }
 
 .h2-title {
-  margin: 60px 0 40px;
+  margin: 60px 0 clamp(30px, 4.5vw, 40px);
   font-size: clamp(2.5rem, 2vw, 3.2rem);
   text-align: center;
 }
@@ -66,14 +66,14 @@
     margin-bottom: 15px;
     font-size: clamp(1.5rem, 1.3vw, 1.7rem);
     line-height: 1.5;
+
+    &:last-child {
+      margin: 0;
+    }
   }
 }
 
 @media (max-width: 768px) {
-  .h2-title {
-    margin-bottom: 30px;
-  }
-
   .list {
     margin: 20px auto;
     padding: 15px 20px;
